@@ -1,1 +1,16 @@
+### Librarys (included):
 
+- JavaFx 11
+- SQLite
+
+### VMSettings:
+
+--module-path "[Your-Path]\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
+
+### Tables [Columns]:
+
+album [_id, name, artist] <br>
+artists [_id, name] <br>
+songs [_id, track. title, album]
+
+*Database included in root project
